# uneven_humanoid

./: .gitignore
deploy/deloy_real_ros1/: README.md  plot_bag.py  record_ctrl.sh
deploy/deloy_real_ros1/src/rl_controller/: CMakeLists.txt  package.xml
deploy/deloy_real_ros1/src/rl_controller/include/: controller.h  utilities.hpp
deploy/deloy_real_ros1/src/rl_controller/launch/: run.launch
deploy/deloy_real_ros1/src/rl_controller/src/: controller.cpp
legged_gym/envs/: __init__.py
legged_gym/envs/base/: legged_robot.py  legged_robot_config.py
legged_gym/envs/g1/: g1_config.py  g1_full_dof_config.py  g1_full_dof_env.py
legged_gym/scripts/: train.py
legged_gym/utils/: __init__.py  terrain.py  wandb_wrapper.py
rsl_rl/rsl_rl/utils/: utils.py
